stylesheet.css
@font-face {
    font-family: 'Anivers_Regular';
    src: url(resources/Anivers_Regular.otf);
}

/*Rules for the body*/
body {
    font-family: 'Anivers_Regular';
    color: #ccc;
    padding-left: 4vw;
    padding-right: 4vw;
}

.default-bg {
    background: #000;
}

.home-bg {
    background: url('./images/home-bg.jpg') no-repeat;
    background-position: top center;
}

.contact-bg {
    background: url('./images/contact-bg.jpg') no-repeat center fixed;
    background-size: cover;
}

/*Includes padding rules for the header display box */
.header {
    position: relative;
    padding-top: 2vw;
    padding-bottom: 2vw;
}

/*Includes the title, the navbar menu, and tail */
.header-display {
    justify-content: flex-start;
    display: flex;
    flex-direction: row;
    /*opacity: 400ms cubic-bezier(.4,0,.2,1); ???*/

}

/*Includes the title and nav-bar as one unit*/
.header-title-nav-wrapper {
    display: flex;
    flex: 1 0 67%;
    align-items: center;
    justify-content: flex-start;
}

.header-title {
    /*Includes title and subtitle*/
    flex: 1 1 20%;
    width: 20%;
}

#site-title {
    /*Includes title only*/
    align-items: center;
    text-decoration: none;
    font-weight: bold;
    color: #ccc;
}

#subtitle {
    float: inherit;
    align-items: center;
    margin-top: 0px;
    margin-bottom: 0px;
}

.header-nav {
    /*navbar menu*/
    text-align: center;
    justify-content: flex-end;
    flex: 1 1 34%;
    font-weight: 200;
}

.header-nav-list {
    display: inline-flex;
    flex-wrap: wrap;
    justify-content: center;
}

.header-nav-list a {
    font-size: 20px;
    margin: 10;
    color: #ccc;
    text-decoration: none;
    -webkit-transition: color 0.3s linear;
    -moz-transition: color 0.3s linear;
    -ms-transition: color 0.3s linear;
    -o-transition: color 0.3s linear;
    transition: color 0.3s linear;
}

.header-nav-list a:hover {
    color: #06F;
}

.header-nav-list-item {
    margin-left: .35vw;
    margin-right: .35vw;
}

.header-tail {
    flex: 33%;
    justify-content: flex-end;
    display: flex;
	line-height: 16px;
	margin-top:auto;
	margin-bottom:auto;
}

.icon {
    margin-left: 2.5vw;
}

/*Body for calendar.html*/
.calendar-wrapper {
    display: block;
    margin: auto;
    width: 50%;
}

/*Body for about.html*/
.about-wrapper {
    margin-top: 6%;
    display: flex;
    flex-wrap: wrap;
    align-items: top;
    width: 100%;
}

h3 {
    margin-top:0;
    font-size: 40px;
}

.about-text {
    flex: 1;
    font-size: 1.3em;
    margin-right:2vw;
}

.about-photo {
    width:500px;
    min-width:350px;
    max-width:40vw;
    flex: 1;
}

/*Gallery Grid*/
.gallery-container {
	margin-top:6%;
	margin-left: auto;
	margin-right:auto;
	display:block;
	width:90%;
	align-items: center;
	justify-content: center;
}

img {
	width: 100%;
}

.gallery-grid {
	display: flex;
}

.gallery-grid-col {
	flex: 1;
	padding: 0 .1em;
}

.gallery-grid-col--2, .gallery-grid-col--3 {
	display:none;
}

.gallery-content {
	position: absolute;
	background: rgba(0,0,0,.8);
	margin-top:1em;
	color: #ccc;
}

h2 {
	margin: .2em .5em;
	font-size: 1vw;
}

a {
	color: #ccc;
	text-decoration:none; 
}

/*Media grid display*/
.media-body {
    margin-top: 6%;
    align-items: center;
}

.media-grid {
    display: grid;
    padding: 2em;
    counter-reset: grid-items;
    position: relative;
}

.media-grid::before {
    position: absolute;
    padding-left: 3em;
    content: attr(data-keyword);
}

.media-grid-container {
    grid-template-columns: repeat(auto-fit, minmax(560px, 1fr));
}

.media-grid-item {
    min-height: 500px;
    width: calc(1.672*height);
    counter-increment: grid-item;
}

.media-grid-item::before {
    content: counter(grid-item);
}

/*Contact page*/
.contact-wrapper {
	max-width:600px;
	width:100%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 6%;
	text-align: center;

}

.contact-title{
	width:600px;
	margin-left: auto;
	margin-right: auto;
	background:rgba(187, 187, 187, 0.5);
	border-color:transparent;
	color: rgb(12, 12, 12);
	text-transform: uppercase;
	transition: all 4s ease-in-out;
}

.contact-title h2{
	font-size: 20px;
}

form {
	margin-top: 50px;
	transition: all 4s ease-in-out;
}

.form-control{
	width:600px;
	background:transparent;
	border:none;
	outline:none;
	border-bottom:1px solid gray;
	color: #fff;
	font-size:18px;
	margin-bottom: 16px;
}

input {
	height: 45px;
	font-family:'Anivers_Regular';
}

textarea {
	font-family:'Anivers_Regular';
}

form .submit{
	background:rgba(112, 112, 112, 0.5);
	border-color:transparent;
	color: #fff;
	font-size: 20px;
	font-weight: bold;
	letter-spacing: 2px;
	height: 50px;
	margin-top: 20;
}

form .submit:hover{
	background-color: rgba(0, 0, 0, 0.719);
	cursor: pointer;
}

/*Tail padding*/
.tail {
    padding-bottom: 4vw;
}

